--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,44 @@
 ---
 layout: default
-title: Neat Starter
+title: LightPositive
 path: home
 ---
 
-<div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
-  <h1>
-    Welcome to
-    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
-      {{title}}
-    </strong>
-  </h1>
-
-  <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
-    Starter Template. Get Started by editing.
-    <code class="bg-gray-100 text-blue-800 p-1">/index.njk</code>
-  </p>
-
-  {% include "./_includes/partials/content.html" %}
+<div class="logo-menu__container">
+  <div class="logo-menu__card">
+    <img
+      src="/static/img/about_l.png"
+      class="logo-menu__img"
+      alt="about us image"
+    />
+    <p class="logo-menu__text">Rólunk</p>
+  </div>
+  <div class="logo-menu__card">
+    <img
+      src="/static/img/referenc_l.png"
+      class="logo-menu__img"
+      alt="references image"
+    />
+    <p class="logo-menu__text">Referenciák</p>
+  </div>
+  <div class="logo-menu__card">
+    <img
+      src="/static/img/contact_l.png"
+      class="logo-menu__img"
+      alt="conatact image"
+    />
+    <p class="logo-menu__text">Kapcsolat</p>
+  </div>
+</div>
+<div class="spacer__container">
+  <img src="/static/img/spacer.png" class="spacer__img" alt="spacer line" />
+</div>
+<div class="opening-image__container">
+  <div class="opening-image__border">
+    <img
+      src="/static/img/egeszdeg_hid_w.jpg"
+      class="opening-image__img"
+      alt="opening image"
+    />
+  </div>
 </div>
