aboutus done contact working in progress

--- a/src/index.html
+++ b/src/index.html
@@ -5,30 +5,30 @@ path: home
 ---
 
 <div class="logo-menu__container">
-  <div class="logo-menu__card">
+  <a href="/aboutus" class="logo-menu__card">
     <img
       src="/static/img/about_l.png"
       class="logo-menu__img"
       alt="about us image"
     />
     <p class="logo-menu__text">Rólunk</p>
-  </div>
-  <div class="logo-menu__card">
+  </a>
+  <a href="/references" class="logo-menu__card">
     <img
       src="/static/img/referenc_l.png"
       class="logo-menu__img"
       alt="references image"
     />
     <p class="logo-menu__text">Referenciák</p>
-  </div>
-  <div class="logo-menu__card">
+  </a>
+  <a href="/contact" class="logo-menu__card">
     <img
       src="/static/img/contact_l.png"
       class="logo-menu__img"
       alt="conatact image"
     />
     <p class="logo-menu__text">Kapcsolat</p>
-  </div>
+  </a>
 </div>
 <div class="spacer__container">
   <img src="/static/img/spacer.png" class="spacer__img" alt="spacer line" />
