--- a/src/references/index.html
+++ b/src/references/index.html
@@ -4,14 +4,30 @@ title: Referenciák
 path: references
 ---
 
-<div>
-  <h1>{{title}}</h1>
-  <div>
-    <img src="" alt="" />
-    <a href="/references/corporate">KONFERENCIÁK - VÁLLALATI RENDEZVÉNYEK</a>
-  </div>
-  <div>
-    <img src="" alt="" />
-    <a href="/references/festivals">FESZTIVÁLOK-KONCERTEK</a>
+<div class="refs__body">
+  <h2 class="refs__heading">REFERENCIÁK</h2>
+  <div class="refs__content">
+    <div class="refs__item">
+      <a class="refs__link" href="/references/corporate">
+        <img
+          src="/static/img/vallalat_trening_l.jpg"
+          alt="corporate event galery cover"
+          class="refs__img"
+        />
+        <h3 class="refs__item-heading">
+          KONFERENCIÁK - VÁLLALATI RENDEZVÉNYEK
+        </h3>
+      </a>
+    </div>
+    <div class="refs__item">
+      <a class="refs__link" href="/references/festivals">
+        <img
+          src="/static/img/koncert_fest_l.jpg"
+          alt="festival and concert event galery cover"
+          class="refs__img"
+        />
+        <h3 class="refs__item-heading">FESZTIVÁLOK-KONCERTEK</h3>
+      </a>
+    </div>
   </div>
 </div>
