working imag upload to post dir

--- a/src/references/corporate/index.html
+++ b/src/references/corporate/index.html
@@ -23,7 +23,10 @@ layout: posts_corporate
     {% endif %}
 
     <p>
-      <a href="{{ post_corporate.url | url }}" class=""> Read more → </a>
+      <a href="{{ post_corporate.url | url }}" class=""
+        >ide kellene beszúrni a borítót!
+        <!-- <img src="{{co00}}" alt="" /> -->
+      </a>
     </p>
   </article>
   {% endfor %}
