--- a/src/references/festivals/index.html
+++ b/src/references/festivals/index.html
@@ -2,28 +2,19 @@
 layout: posts_festival
 ---
 
-<section class="">
+<section class="posts__body">
   {% set postslist = collections.post_festival %} {% for post_festival in
   postslist | reverse %}
-  <article class="">
-    <h2 class="">
+  <article class="posts__content">
+    <h2 class="posts__heading">
       <a href="{{ post_festival.url | url }}">
         {% if post_festival.data.title %} {{ post_festival.data.title }} {% else
         %} Untitled {% endif %}
       </a>
     </h2>
-    <p class="">
-      <time>
-        {{ post_festival.date | readableDate }} by
-        <a>{{ post_festival.data.author }}</a>
-      </time>
-    </p>
-    {% if post_festival.data.description %}
-    <p class="">{{ post_festival.data.description }}</p>
-    {% endif %}
-
-    <p>
-      <a href="{{ post_festival.url | url }}" class=""> Read more → </a>
+      <a href="{{ post_festival.url | url }}" class=""> Read more → 
+        <!-- <img src="{{ posts_corporate.data.kep.url | url }}" class="post__image" alt="" /> -->
+      </a>
     </p>
   </article>
   {% endfor %}
