--- a/src/references/corporate/index.html
+++ b/src/references/corporate/index.html
@@ -2,18 +2,20 @@
 layout: posts_corporate
 ---
 
-<section class="post__body">
+<section class="posts__content">
   {% set postslist = collections.corporate %} {% for corporate in postslist |
-  reverse %}
-  <figure class="content">
-    <a href="{{ corporate.url | url }}" class="post__link">
+  reverse %} {% if corporate.url != page.url %}
+  <figure class="posts__card">
+    <a href="{{ corporate.url | url }}" class="posts__link">
       <img
         src="{{corporate.url}}{{corporate.data.coverImage}}"
-        class="post__image"
-        alt=""
+        class="posts__image-cover"
+        alt="{{ corporate.data.title }} cover image"
       />
-      <figcaption>{{ corporate.data.title }}</figcaption>
+      <figcaption class="posts__image-caption">
+        {{ corporate.data.title }}
+      </figcaption>
     </a>
   </figure>
-  {% endfor %}
+  {% endif %} {% endfor %}
 </section>
