--- a/src/aboutus/index.html
+++ b/src/aboutus/index.html
@@ -79,9 +79,22 @@ path: aboutus
       </div>
     </article>
     <div class="aboutus__language-picker">
-      <p class="aboutus__language-picker--hu hu-sw">hu</p>
+      <p class="aboutus__language-picker--hu hu-sw orangeGrey">hu</p>
       <p class="aboutus__language-picker--separator">/</p>
       <p class="aboutus__language-picker--en en-sw">en</p>
     </div>
   </div>
 </div>
+<script>
+  const languagePicker = document.querySelector(".aboutus__language-picker");
+  const huSw = document.querySelector(".hu-sw");
+  const enSw = document.querySelector(".en-sw");
+  const hu = document.querySelectorAll(".hu");
+  const en = document.querySelectorAll(".en");
+  languagePicker.addEventListener("click", () => {
+    hu.forEach((element) => {element.classList.toggle("hideHu")});
+    en.forEach((element) => {element.classList.toggle("showEn")});
+    huSw.classList.contains("orangeGrey") ? huSw.classList.remove("orangeGrey") : huSw.classList.add("orangeGrey");
+    enSw.classList.contains("orangeGrey") ? enSw.classList.remove("orangeGrey") : enSw.classList.add("orangeGrey");
+  })
+</script>
