--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -12,27 +12,27 @@ path: contact
     <div class="contact__block1">
       <div class="form__body">
         <div class="form__container">
-          <form action="/contact/success" name="contact" method="POST" data-netlify="true">
+          <form action="/contact/success" name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
             <div class="form__item">
               <label for="form__name--input" class="form__label">Név</label>
-              <input placeholder="John Doe" type="text" name="name" id="form__name--input" />
+              <input placeholder="John Doe" type="text" name="name" id="form__name--input" required/>
             </div>
             <div class="form__item">
               <label for="form__email--input" class="form__label">Email</label>
-              <input placeholder="john.doe@gmail.com" type="text" name="email" id="form__email--input" />
+              <input placeholder="john.doe@gmail.com" type="email" name="email" id="form__email--input" required/>
             </div>
             <div class="form__item">
               <label for="form__subject--input" class="form__label">Tárgy</label>
-              <input placeholder="Ajánlatkérés" type="text" name="subject" id="form__subject--input" />
+              <input placeholder="Ajánlatkérés" type="text" name="subject" id="form__subject--input" required/>
             </div>
             <div class="form__item">
               <label for="form__message--input" class="form__label">Üzenet</label>
-              <textarea placeholder="Kedves LightPositive!&#13;&#10;&#09;Szeretnék ajánlatot kérni egy 4 lábas 8x6m alapterületű fedésre, az egy hónap múlva esedékes rendezvényünkre, egy napra, Budapesten.&#13;&#10;&#09&#09&#09&#09&#09&#09&#09Tisztelettel: John Doe" name="message" id="form__message--input" rows="5" cols="50"/></textarea>
+              <textarea placeholder="Kedves LightPositive!&#13;&#10;&#09;Szeretnék ajánlatot kérni egy 4 lábas 8x6m alapterületű fedésre, az egy hónap múlva esedékes rendezvényünkre, egy napra, Budapesten.&#13;&#10;&#09&#09&#09&#09&#09&#09&#09Tisztelettel: John Doe" name="message" id="form__message--input" rows="5" cols="50" required /></textarea>
             </div>
             <div class="form__submit">
               <input type="submit" value="Küldés" id="form__submit--input" />
             </div>
-            <div data-netlify-recaptcha="true"></div>
+            <div class="form__item" data-netlify-recaptcha="true"></div>
           </form>
         </div>
       </div>
