--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -32,7 +32,7 @@ path: contact
             <div class="form__submit">
               <input type="submit" value="Küldés" id="form__submit--input" />
             </div>
-            <input class="form__item" data-netlify-recaptcha="true" required />
+            <div class="form__item" data-netlify-recaptcha="true" required></div>
           </form>
         </div>
       </div>
