--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -30,7 +30,7 @@ path: contact
               <textarea placeholder="Kedves LightPositive!&#13;&#10;&#09;Szeretnék ajánlatot kérni egy 4 lábas 8x6m alapterületű fedésre, az egy hónap múlva esedékes rendezvényünkre, egy napra, Budapesten.&#13;&#10;&#09&#09&#09&#09&#09&#09&#09Tisztelettel: John Doe" name="message" id="form__message--input" rows="5" cols="50" required /></textarea>
             </div>
             <div class="form__submit">
-              <input type="submit" value="Küldés" id="form__submit--input" />
+              <input type="submit" value="Küldés" id="form__submit--input" class="captcha"/>
             </div>
             <div class="form__item" data-netlify-recaptcha="true" required></div>
           </form>
@@ -104,3 +104,17 @@ path: contact
 
 
 
+<script>
+  function unHideButton() {
+    if (grecaptcha.getResponse().length > 0) {
+      document.getElementById('form__submit--input').disabled = false
+    }
+  }
+  document.addEventListener("DOMContentLoaded", () => {
+    if (typeof grecaptcha === "object") {
+      document.querySelector('.captcha').dataset.callback = "unHideButton"
+    } else {
+      console.log("Unable to add `data-callback` to grecaptcha as it doesn't exist.");
+    }
+  });
+</script>
