--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -107,12 +107,17 @@ path: contact
 <script>
   const submitButton = document.getElementById("form__submit--input");
 
-
+  submitButton.addEventListener("hover", (event) => {
+    if (!grecaptcha.getResponse().length > 0) {submitButton.setCustomValidity("Jelöld be az alábbi jelölömezőt is!");
+    }
+  });
+  
   submitButton.addEventListener("click", (event) => {
     if (typeof grecaptcha === "object") {
       if (!grecaptcha.getResponse().length > 0) {
         event.preventDefault()
-        submitButton.setCustomValidity("Jelöld be az alábbi jelölömezőt is!");
+    } else {
+      submitButton.setCustomValidity("Jelöld be az alábbi jelölömezőt is!");
     }
     } else {
       console.log("Works only when deployed.");
