--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -111,7 +111,7 @@ path: contact
   submitButton.addEventListener("click", (event) => {
     if (typeof grecaptcha === "object") {
       if (!grecaptcha.getResponse().length > 0) {
-        submitButton.setCustomValidity("Jelöld be az alábbi jelölömezőt is!");
+        submitButton.title = "Jelöld be az alábbi jelölömezőt is!";
         event.preventDefault()
     }
     } else {
