--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -107,11 +107,17 @@ path: contact
 <script>
   const submitButton = document.getElementById("form__submit--input");
 
+  submitButton.addEventListener("hover", (event) => {
+      if (!grecaptcha.getResponse().length > 0) {
+        submitButton.title = "Jelöld be az alábbi jelölömezőt is!";
+      } else {
+        submitButton.title = "";
+      }
+      });
 
   submitButton.addEventListener("click", (event) => {
     if (typeof grecaptcha === "object") {
       if (!grecaptcha.getResponse().length > 0) {
-        submitButton.title = "Jelöld be az alábbi jelölömezőt is!";
         event.preventDefault()
     }
     } else {
