--- a/src/contact/success/index.html
+++ b/src/contact/success/index.html
@@ -1,1 +1,13 @@
-<h1>Success Page!</h1>
+---
+layout: default
+---
+
+<h2 class="succesMessage">Az üzenetet sikersen elküldük!</h2>
+
+<script>
+  window.onload = (event) => {
+    // setTimeout(() => {
+    //   window.location.assign("/contact/index.html");
+    // }, 5000);
+  };
+</script>
