--- a/src/contact/success/index.html
+++ b/src/contact/success/index.html
@@ -6,8 +6,8 @@ layout: default
 
 <script>
   window.onload = (event) => {
-    // setTimeout(() => {
-    //   window.location.assign("/contact/index.html");
-    // }, 5000);
+    setTimeout(() => {
+      window.location.assign("/contact/index.html");
+    }, 5000);
   };
 </script>
