gallery js 1st version

--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -107,19 +107,18 @@ path: contact
 <script>
   const submitButton = document.getElementById("form__submit--input");
 
-  // submitButton.addEventListener("mouseover", (event) => {
-  //     if (!grecaptcha.getResponse().length > 0) {
-  //       submitButton.title = "Jelölje be az alábbi jelölömezőt is!";
-  //     } else {
-  //       submitButton.title = "";
-  //     }
-  //     });
+  submitButton.addEventListener("mouseover", (event) => {
+      if (!grecaptcha.getResponse().length > 0) {
+        submitButton.title = "Jelölje be az alábbi jelölömezőt is!";
+      } else {
+        submitButton.title = "";
+      }
+      });
 
   submitButton.addEventListener("click", (event) => {
     if (typeof grecaptcha === "object") {
       if (!grecaptcha.getResponse().length > 0) {
-        submitButton.setCustomValidity("Jelölje be az alábbi jelölömezőt is!");
-        event.preventDefault();
+        event.preventDefault()
     }
     } else {
       console.log("Works only when deployed.");
@@ -127,5 +126,3 @@ path: contact
   });
 </script>
 
-oninvalid="this.setCustomValidity('Enter User Name Here')"
-  oninput="this.setCustomValidity('')"
